appId: com.postep.mobile
---
- waitForAnimationToEnd:
    timeout: 15000
- tapOn:
    point: "17%,4%"
- waitForAnimationToEnd:
    timeout: 3000
- tapOn:
    point: "50%,32%"
- waitForAnimationToEnd:
    timeout: 3000
- swipe:
    start: "50%,80%"
    end: "50%,35%"
    duration: 500
- tapOn:
    point: "90%,42%"
- tapOn:
    point: "83%,4%"
- waitForAnimationToEnd:
    timeout: 3000
